Use Jackson to parse XML, reducing load times by almost 90%